# introduction_to_zig

./: .gitignore  README.md  ziglings_instructions.md
1_introducing_zig/1_2_Hello_world/hello_word/: build.zig.zon
1_introducing_zig/1_4_creating_objects/ZigExamples/file-io/: shop-list.txt
1_introducing_zig/1_4_creating_objects/arrays/src/: arrays.zig
1_introducing_zig/1_4_creating_objects/block_and_scopes/src/: blocks_scopes.zig
1_introducing_zig/1_4_creating_objects/c_strings/: CMakeLists.txt  main.c
1_introducing_zig/1_4_creating_objects/constants/: .gdb_history
1_introducing_zig/1_4_creating_objects/constants/src/: constants.zig
1_introducing_zig/1_4_creating_objects/iterate_string/src/: iterate_string.zig
1_introducing_zig/1_4_creating_objects/read_file/src/: read_file.zig
1_introducing_zig/1_4_creating_objects/sentinel/src/: sentinel.zig
2_control_flow/break_continue_examples/src/: break_continue_example.zig
2_control_flow/defer_example/src/: defer_example.zig
2_control_flow/errdefer_example/src/: errdefer_example.zig
2_control_flow/for_loop_example/src/: for_loop_example.zig
2_control_flow/function_parameters/src/: function_parameters.zig
2_control_flow/labeled_switch/src/: lswitch.zig
2_control_flow/pub_keyword_struct_example/src/: pub_example.zig  user.zig
2_control_flow/struct_example/src/: struct_example.zig
2_control_flow/switch/src/: switch.zig
2_control_flow/while_loop_example/src/: while_loop_example.zig
hello_word/: build.zig  build.zig.zon
hello_word/src/: main.zig
hello_world_simple/src/: main.zig
(+6 files in other folders)
